# kafka_rust

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs
