[package]
name = "kafka_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
futures = "0.3.30"
rdkafka = "0.36.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"]}
